style.css
:root {
    --vex-red: #f10035;
    --vex-red-faded: #f14d71;
    --vex-blue: #008ec7;
    --vex-blue-faded: #62aac7;
    --vex-yellow: yellow;
    --vex-dark-gray: darkgray;

    --ring-width: 4em;
    --ring-height: calc(var(--ring-width) * .33);
    --ring-radius: calc(var(--ring-height) /2);

    --ring-stacking-unit-height: calc(var(--ring-height) + 0.3em);
    --mogo-height: calc(var(--ring-stacking-unit-height) * 6 + 1em);
    --alliance-stake-height: calc(var(--ring-stacking-unit-height) * 2);
    --neutral-stake-height: calc(var(--ring-stacking-unit-height) * 6);
    --high-stake-height: calc(var(--ring-stacking-unit-height) * 1);
}

.split_screen_element {
    padding: 1%;
    width: 100%; /* Default to full width on mobile */
}

#error_messages {
    color: red;
}

.stake_area {
    display: inline-flex;
    vertical-align: bottom;
    margin: 1em;
    margin-top: 0;
    user-select: none;
}

#rings_start {
    user-select: none;
    border: 1px solid gray;
}

.stake {
    width: 0.5em;
    border-left: 1em solid white;
    border-right: 1em solid white;

    margin-left: 1em;
    margin-right: 1em;

    /* Make rings stack nice */
    display: inline-flex;
    justify-content: flex-end;
    align-items: center;
    flex-direction: column;

    user-select: none;
}

.alliance_stake {
    height: var(--alliance-stake-height);
}

.neutral_stake {
    height: var(--neutral-stake-height);
    background-color: var(--vex-dark-gray);
}

.mobile_goal {
    height: var(--mogo-height);
    background-color: var(--vex-yellow);
}

.high_stake {
    height: var(--high-stake-height);
    background-color: var(--vex-yellow);
}

.ring {
    width: var(--ring-width);
    height: var(--ring-height);
    border-radius: var(--ring-height);
    display: inline-block;

    margin: 0.1em;
    text-align: center;
    user-select: none;
}

.red {
    background-color: var(--vex-red);
}

.blue {
    background-color: var(--vex-blue);
}

.ghost_ring {
    /* background-color: gray !important; */
    opacity: .5;
}

.score-table {
    background-color: white;
    border-spacing: 0px;
    border-collapse: collapse;
    text-align: center;
}

.score-table td {
    border: 1px solid gray;
    padding: 4px;
}

.score-table th {
    border: 0.5px solid gray;
    padding: 4px;

}

.score-table th.neutral {
    background-color: lightgray;
}

.score-table th.red {
    background-color: var(--vex-red);
    min-width: 2em;
}

.score-table th.blue {
    background-color: var(--vex-blue);
    min-width: 2em;
}

.score-table td.neutral {
    background-color: white;
}

.score-table td.red {
    background-color: var(--vex-red-faded);
}

.score-table td.blue {
    background-color: var(--vex-blue-faded);
}

.selectors {
    margin-top: 20px;
}

button {
    margin-top: 10px;
    margin-bottom: 10px;
}

#error_messages {
    margin-top: 10px;
    margin-bottom: 10px;
}

.top-score {
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: xx-large;
    padding: 0;
    margin: 0;
}

#top_score_red {
    color: red;
}

#top_score_blue {
    color: rgb(0, 106, 255);
}

p {
    margin-top: 20px;
    margin-left: 20px;
    margin-bottom: 10px;
}

.top-score h2 {
    margin-top: 10px;
    margin-bottom: 10px;
}

/* phone */
@media only screen and (max-width: 600px) {
    .split_screen_element {
        padding: 1%;
        width: 100%;
    }

    .table-container {
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
        height: auto;
        margin-top: 20px;
    }

    .buddy-climb {
        display: block;
        margin-top: 10px;
    }

    #error_messages {
        margin-left: 50px;
        margin-right: 50px;
    }

    .top-score {
        width: 100%;
    }
}

/* desktop */
@media only screen and (min-width: 600px) {
    #split_screen {
        display: flex;
    }
    
    .split_screen_element {
        padding: 1%;
        width: 50%;
    }

    .buddy-climb {
        display:inline;
        margin-top: 10px;
    }

    .top-score {
        width: 50%;
    }
}

